# tawny-cpp

./: .gitignore  CLAUDE.md  CMakeLists.txt  JOURNAL.md  LICENSE  README.md
src/: main.cpp
src/emulator/: m6502.h
test/: example_test.cpp
test/dormann/: decimal_test_bin.h  dormann_cpu_config.h  dormann_cpu_config_test.cpp  functional_test_bin.cpp  functional_test_bin.h  interrupt_test_bin.h
test/emulator/: m6502_dormann_test.cpp  m6502_test.cpp
